Fixup breaking on small screens
Need to avoid breaking on the wrong thing here. This adds nbsp to
space between icon. Also increase line height for "hlist"s.

--- a/style.css
+++ b/style.css
@@ -444,6 +444,8 @@ h3 { font-size: 90%; }
 h4 { font-size: 80%; }
 h5 { font-size: 70%; }
 
+.hlist { line-height: 1.5; }
+
 pre, code {
 	font-family: "Source Code Pro", Courier, monospace;
 }
